<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/batik11"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/point_saya"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/white"
            android:alpha="0.8"
            android:textSize="20sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/saldo"
            android:textSize="20sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="23000"
            android:layout_toEndOf="@id/text1"
            android:padding="10dp"/>

    </RelativeLayout>


        <Button
            android:id="@+id/tunai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_saldo"
            android:text="@string/tunai"
            android:padding="15dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/round1"/>

        <Button
            android:id="@+id/transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_transfer"
            android:text="@string/transfer"
            android:padding="15dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/round1"/>

        <Button
            android:id="@+id/donasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_donasi"
            android:text="@string/donasi"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="14dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/round1"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abadan"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
